# discird_rag_bot_v2

./: .env.example  .gitignore  .gitmessage  CLAUDE.md  Dockerfile  README.md  bot.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
archiver/: adapters.py  admin.py  dto.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
archiver/migrations/: 0001_initial.py  0002_alter_qnalog_hit_count_alter_qnalog_keywords.py  0003_remove_category_choices.py  0004_add_embedding.py  0005_remove_trgm_index.py
common/: constants.py  exceptions.py
config/: settings.py  urls.py
docs/: README.md  architecture.md
docs/adr/: ADR-001-pgvector-rag-migration.md  ADR-002-gemini-model-split.md  ADR-003-django-over-fastapi.md  ADR-004-dto-adapter-pattern.md
tests/: conftest.py  test_basic.py  test_edge_cases.py  test_new_question.py  test_similar_question.py
